--- a/WeatherPy/VacationPy.ipynb
+++ b/WeatherPy/VacationPy.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "4   26.89     63.00        3.00  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,24 +195,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Store latitude and longitude in locations\n",
     "locations = cities_output_df[[\"Lat\", \"Lng\"]]\n",
-    "weight = cities_output_df[\"Humidity\"].astype(float)"
+    "weight = cities_output_df[\"Humidity\"].astype(float)\n",
+    "#weight = cities_output_df[\"Humidity\"].max()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 37,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2cb8cf75512e40baae00a2f7cd6c2a3e",
+       "model_id": "865e2ddd635e4052aacb5a061827cb75",
        "version_major": 2,
        "version_minor": 0
       },
@@ -230,7 +233,7 @@
     "\n",
     "# Create heat layer\n",
     "heat_layer = gmaps.heatmap_layer(locations, weights=weight, \n",
-    "                                 dissipating=False, max_intensity=10,\n",
+    "                                 dissipating=False, max_intensity=cities_output_df[\"Humidity\"].max(),\n",
     "                                 point_radius=1)\n",
     "\n",
     "# Add layer\n",
@@ -251,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +481,7 @@
        "[526 rows x 11 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +621,7 @@
        "501        27  25.02  37.27     76.26        4.63             "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "metadata": {
     "scrolled": true
    },
@@ -786,7 +789,7 @@
        "501        27  25.02  37.27     76.26        4.63      Tanal Hotel Apartment  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,13 +849,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7d1b8f83efa483f89a2bee8c9c7e3c3",
+       "model_id": "56abbd35cfca49b1b3b3b63c7bb37659",
        "version_major": 2,
        "version_minor": 0
       },
@@ -876,15 +879,50 @@
     "#    'margin': '0 auto 0 auto'\n",
     "#}\n",
     "\n",
+    "name = hotel_df['Hotel Name'].tolist()\n",
+    "city = hotel_df['City'].tolist()\n",
+    "country = hotel_df['Country'].tolist()\n",
+    "\n",
     "#fig = gmaps.figure(layout=figure_layout)\n",
     "fig = gmaps.figure()\n",
     "\n",
     "# Assign the marker layer to a variable\n",
-    "markers = gmaps.marker_layer(locations)\n",
+    "markers = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
+    "\n",
     "# Add the layer to the map\n",
     "fig.add_layer(markers)\n",
     "\n",
     "# Display Map\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "727ab999f5ae42f8939820ae496ea990",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Create a combined map\n",
+    "fig = gmaps.figure()\n",
+    "\n",
+    "fig.add_layer(heat_layer)\n",
+    "fig.add_layer(markers)\n",
+    "\n",
     "fig"
    ]
   },
